--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 /* Estilos Gerais */
 
 body {
-    font-family: Arial, sans-serif;
+    font-family:'Birds of Paradise', sans-serif;
     margin: 0;
     padding: 0;
     line-height: 1.6;
