--- a/style.css
+++ b/style.css
@@ -21,11 +21,14 @@ header {
     background-color: rgba(192, 154, 154, 1); /* Cor principal */
     color: #ffffff; /* Cor do texto */
     font-family: 'marcellus', sans-serif;
-    padding: 10px 30px;
+    padding: 10px 40px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.3);
+    
+    /* Bordas arredondadas 
+    /* Adiciona sombra ao cabeçalho */      
     
     
     position: fixed; /* Mantém o cabeçalho fixo */
@@ -102,20 +105,36 @@ img {
 
 /* Rodapé */
 footer {
-    background-color:  rgba(192, 154, 154, 1); /* Cor principal */
-    color: #402E2D; /* Cor do texto */
+    background-color: rgba(192, 154, 154, 1);
+    color: #402E2D;
     text-align: center;
-    padding: 10px;
-    margin-top: 200px;
+    padding: 20px;
+    margin-top: 10px;
 }
 
 footer a {
-    color: #402E2D; /* Cor do texto */
+    color: #402E2D;
     text-decoration: none;
+    display: inline-block;
+    margin: 0 10px;
 }
 
 footer a:hover {
     text-decoration: underline;
+}
+
+footer .social-icons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin-top: 10px;
+}
+
+footer img {
+    width: 30px;
+    height: 30px;
+    vertical-align: middle;
 }
 
 /* Media Queries para Responsividade */
